2007-10-05  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_swov.c: (Upd_Video):

	Enable colorkey on secondary.

2007-10-03  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_driver.c: (VIAPreInit):

	Fix memory detection for P4M900 and CX700.

2007-09-12  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_bios.h:
	* src/via_driver.c: (VIAWriteMode), (VIAAdjustFrame),
	(VIASwitchMode):
	* src/via_mode.c: (ViaModeSecondaryVGAFetchCount),
	(ViaModeSecondaryVGAOffset), (ViaModeSecondaryVGA):
	* src/via_swov.c: (Upd_Video):
	* src/via_vbe.c: (ViaVbeSetPanelMode), (ViaVbeSetMode):

	Fix offset when using vbe modes on secondary.

2007-09-11  Xavier Bachelot  <xavier-at-bachelot-dot-org>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevel.h:
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* src/via.h:
	* src/via_accel.c: (viaInitExa):
	* src/via_bandwidth.c: (ViaSetPrimaryFIFO):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit),
	(VIASave), (VIARestore), (VIALoadPalette):
	* src/via_driver.h:
	* src/via_id.c:
	* src/via_mode.c: (ViaOutputsDetect):
	* src/via_priv.h:
	* src/via_swov.c: (Upd_Video):
	* src/via_vbe.c: (ViaVbeInitInt10), (ViaVbeGetRefreshRateIndex),
	(ViaVbeGetActiveDevices), (ViaVbeSetActiveDevices),
	(ViaVbeSetPanelExpansion), (ViaVbeSetRefresh), (ViaVbeSetMode),
	(ViaVbeSaveRestore), (ViaVbeModePreInit):
	* src/via_xvmc.c: (ViaInitXVMC), (ViaXvMCCreateContext):

	Sync with experimental_branch.

2007-09-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_id.c:

	Added Gigabyte GA-VM900M ID, reported by Alexandre Penasso Teixeira.

2007-09-07  Gabiel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevel.h:
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* unichrome/via.h:
	* unichrome/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit),
	(VIASave), (VIARestore), (VIALoadPalette):